packages/edxml-test-corpus/edxml_test_corpus-3.0.1-py3-none-any.whl/edxml_test_corpus/tests/3/3.0/3.0.0/valid/duplicate-source-multiple-files/input-002.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if duplicate source definitions in multiple files are accepted.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types/>
    <concepts/>
    <event-types/>
    <sources>
      <source uri="/a/" description="a" version="1"/>
    </sources>
  </ontology>
</edxml>
